# kiku

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: pre-commit
apps/android/: README.md
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/ui/: index.html  package.json  tsconfig.json
apps/desktop/ui/src/: App.tsx  CompanionShiba.tsx  PhraseTestFlyout.tsx  backend.ts  japanesePhrasebook.ts  styles.css
crates/kiku-asr/: Cargo.toml
crates/kiku-asr/src/: lib.rs
crates/kiku-audio/: Cargo.toml
crates/kiku-audio/src/: lib.rs
crates/kiku-core/: Cargo.toml
crates/kiku-core/src/: controller.rs  lib.rs  session.rs
crates/kiku-models/: Cargo.toml
crates/kiku-models/src/: lib.rs
crates/kiku-platform/: Cargo.toml  build.rs
crates/kiku-platform/src/: lib.rs
crates/kiku-privacy/: Cargo.toml
crates/kiku-privacy/src/: lib.rs
crates/kiku-settings/: Cargo.toml
crates/kiku-settings/src/: lib.rs
crates/kiku-transcript/: Cargo.toml
crates/kiku-transcript/src/: lib.rs
crates/kiku-translate/: Cargo.toml
crates/kiku-translate/src/: lib.rs
crates/kiku-visualizer/: Cargo.toml
crates/kiku-visualizer/src/: lib.rs
docs/: 2026-04-10-techdebt-performance-finds.md  codex-multi-agent-guide.md  dev-commands.md  development-quality-gates.md  kiku-design-plan.md  kiku-multi-agent-playbook.md  v0.1.10-android-alpha-pre-release.md  v0.1.11-incremental-readme.md  v0.1.4-android-alpha-pre-release.md  v0.1.4-initial-release.md
docs/architecture/: phase-0-foundation.md
docs/guidance/: rust-agentic-adoption-for-kiku.md  rust-agentic-guidance.md
docs/security/: README.md
docs/ux/: README.md
models/manifests/: README.md
native/android/KikuAudioPlugin/: README.md
native/macos/KikuCapturePlugin/: CapturePlugin.swift  README.md  SystemAudioCaptureHelper.swift
scripts/dev/: README.md  check.sh  fetch-whisper-model.sh  install-hooks.sh  validate-android-system-audio.sh
scripts/packaging/: README.md
scripts/release/: README.md  auto-semver.mjs  build-android.sh
tests/fixtures/: README.md
tests/integration/: README.md
