[package]
name = "kiku-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[lib]
name = "kiku_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
kiku-asr = { path = "../../../crates/kiku-asr" }
kiku-core = { path = "../../../crates/kiku-core" }
kiku-models = { path = "../../../crates/kiku-models" }
kiku-platform = { path = "../../../crates/kiku-platform" }
kiku-privacy = { path = "../../../crates/kiku-privacy" }
kiku-settings = { path = "../../../crates/kiku-settings" }
kiku-transcript = { path = "../../../crates/kiku-transcript" }
kiku-translate = { path = "../../../crates/kiku-translate" }
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = [] }
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
